Job Orchestrator/src/objects/Job_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Run__c</fullName>
        <label>Next Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>To set the priority in case there is a conflict</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recurrence_Number__c</fullName>
        <label>Recurrence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurrence_Unit__c</fullName>
        <label>Recurrence Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Scope Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>Apex_Class__c</columns>
        <columns>Scope_Size__c</columns>
        <columns>Last_Run__c</columns>
        <columns>Next_Run__c</columns>
        <columns>Recurrence_Unit__c</columns>
        <columns>Recurrence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>